# Reverie-Cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  Tasks.md  build.bat  changelog.md  install.bat  pytest.ini  requirements-tti.txt  requirements.txt  reverie.spec  setup.py  test_qwencode_proxy.py
.github/workflows/: build-core-release.yml  build-plugins.yml  build-windows-exe.yml  test.yml
Reverie UI/: README.md  Reverie UI.slnx  build-gui.ps1
Reverie UI/runtime/: README.md  requirements-tti.txt  reverie_ui_bridge.py
ReverieCli-Rs/: .gitignore  Cargo.toml  README.md  build-windows.ps1
ReverieCli-Rs/crates/reverie-cli/: Cargo.toml  build.rs
ReverieCli-Rs/crates/reverie-cli/src/: main.rs
ReverieCli-Rs/crates/reverie-cli/tests/: cli.rs
ReverieCli-Rs/crates/reverie-context/: Cargo.toml
ReverieCli-Rs/crates/reverie-context/src/: lib.rs
ReverieCli-Rs/crates/reverie-core/: Cargo.toml
ReverieCli-Rs/crates/reverie-core/src/: agent.rs  cli_commands.rs  config.rs  context_compaction.rs  dashboard.rs  error.rs  harness.rs  lib.rs  llm.rs  modes.rs  plugins.rs  prompt.rs  providers.rs  rules.rs  sdk_bridge.rs  session.rs  settings_catalog.rs  streaming.rs  version.rs
ReverieCli-Rs/crates/reverie-engine-lite/: Cargo.toml
ReverieCli-Rs/crates/reverie-engine-lite/src/: lib.rs
ReverieCli-Rs/crates/reverie-lsp/: Cargo.toml
ReverieCli-Rs/crates/reverie-lsp/src/: client.rs  lib.rs  manager.rs  transport.rs  types.rs
ReverieCli-Rs/crates/reverie-lsp/tests/: lsp_tests.rs
ReverieCli-Rs/crates/reverie-mcp/: Cargo.toml
ReverieCli-Rs/crates/reverie-mcp/src/: client.rs  lib.rs  registry.rs  server.rs  transport.rs  types.rs
ReverieCli-Rs/crates/reverie-plugins/: Cargo.toml
ReverieCli-Rs/crates/reverie-plugins/src/: lib.rs
ReverieCli-Rs/crates/reverie-sandbox/: Cargo.toml
ReverieCli-Rs/crates/reverie-sandbox/src/: lib.rs  manager.rs  policy.rs  unix.rs  windows.rs
ReverieCli-Rs/crates/reverie-sandbox/tests/: sandbox_tests.rs
ReverieCli-Rs/crates/reverie-skills/: Cargo.toml
ReverieCli-Rs/crates/reverie-skills/src/: discovery.rs  executor.rs  lib.rs  loader.rs  types.rs
ReverieCli-Rs/crates/reverie-subagents/: Cargo.toml
ReverieCli-Rs/crates/reverie-subagents/src/: lib.rs  manager.rs  spawn.rs  types.rs
ReverieCli-Rs/crates/reverie-tools/: Cargo.toml
ReverieCli-Rs/crates/reverie-tools/src/: lib.rs
ReverieCli-Rs/crates/reverie-tui/: Cargo.toml
ReverieCli-Rs/crates/reverie-tui/src/: app.rs  components.rs  event.rs  handler.rs  lib.rs  render.rs  state.rs
ReverieCli-Rs/crates/reverie-tui/tests/: tui_tests.rs
ReverieCli-Rs/docs/: PARITY.md  TODO.md
ReverieCli-Rs/tests/: cli_smoke.rs
ReverieCli-py/: README.md  build exe.bat  build.bat  build.sh  install.bat  install.sh  requirements-tti.txt  requirements.txt  reverie.spec  setup.py
ReverieCli-py/docs/: CLI_COMMANDS.md  COMPUTER_CONTROLLER.md  CONFIGURATION.md  CONTEXT_ENGINE_MEMORY.md  DEVELOPMENT.md  HARNESS_ENGINEERING.md  README.md  ROADMAP.md  SUBAGENT_UPGRADE.md  changelog.md
ReverieCli-py/reverie/: __init__.py  __main__.py  agent_regression.py  agnes.py  aihubmix.py  atlas.py  codex.py  config.py  desktop_catalog.py  diagnostics.py  harness.py  inline_images.py  lifecycle.py  mcp.py  media_capabilities.py  modelscope.py  modes.py  nvidia.py  opencode.py  provider_smoke.py  proxy.py  request_identity.py  sdk_bridge.py  security_policy.py  security_utils.py  sensenova.py  settings_catalog.py  skills_manager.py  storage.py  tls.py  unlimitedsurf.py  version.py  webgemini.py  workspace_guard.py
ReverieCli-py/scripts/: check_dependency_pins.py  generate_reverie_icons.py  merge_kernel_manifests.py  pack_ui_resources.py  smoke_sdk_bridge.py  write_kernel_manifest.py
ReverieCli-py/tests/: test_agent_openai_sdk.py  test_agnes.py  test_agnes_tti_profiles.py  test_aihubmix.py  test_batch_prompt_mode.py  test_blender_modeling_workbench.py  test_blender_plugin.py  test_codex_reverse_proxy.py  test_config_repair.py  test_context_engine_reliability.py  test_context_engine_upgrades.py  test_desktop_bridge.py  test_engine_migration.py  test_engine_playable_contracts.py  test_game_models_plugin.py  test_gamer_mode_upgrade.py  test_gamer_runtime_evidence.py  test_inline_media.py  test_input_handler.py  test_kernel_manifest_merge.py  test_lifecycle_and_regression.py  test_mcp_background_discovery.py  test_memory_os.py  test_model_provider_transports.py  test_modeling_and_asset_tool_completion.py  test_modelscope.py  test_native_runtime_backends.py  test_non_game_completion.py  test_nvidia.py  test_open_computer_use.py  (+26 more)
ReverieCli-ui/: .npmrc  README.md  build.bat  build.sh  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts  vitest.config.ts
artifacts/: Tasks.md  task_list.json
comfy/: generate.bat  generate_image.py  pack_embedded.py  requirements.txt  setup_env.bat
docs/: CLI_COMMANDS.md  CONFIGURATION.md  CONTEXT_ENGINE_BENCHMARK.md  DEVELOPMENT.md  HARNESS_ENGINEERING.md  README.md  README.zh-CN.md  SECURITY_PERMISSIONS.md  SUBAGENTS.md  SUBAGENT_UPGRADE.md  changelog.md  reverie_gamer_3d_game_generation_assessment.md  reverie_modeling_pipeline.md  writer_mode.md
plugins/: README.md
reverie/: __init__.py  __main__.py  atlas.py  automation_local.py  codex.py  config.py  geminicli.py  harness.py  iflow.py  mcp.py  modelscope.py  modes.py  nvidia.py  provider_smoke.py  qwencode.py  rules_manager.py  sdk_bridge.py  security_utils.py  skills_manager.py  version.py  web.py  web_direct.py
tests/: __init__.py  test_agent_openai_sdk.py  test_batch_prompt_mode.py  test_blender_modeling_workbench.py  test_blender_plugin.py  test_config_repair.py  test_game_models_plugin.py  test_gamer_mode_upgrade.py  test_modelscope.py  test_nvidia.py  test_reverie_engine_audio.py  test_reverie_engine_delivery.py  test_reverie_engine_help.py  test_reverie_prompt_upgrade.py  test_reverie_ui_integration.py  test_runtime_optimizations.py  test_runtime_plugins.py  test_tooling_upgrades.py  test_tui_selector.py  test_web_source.py  test_workspace_security.py
(+589 files in other folders)
