[workspace]
members = [
    "crates/reverie-cli",
    "crates/reverie-core",
    "crates/reverie-context",
    "crates/reverie-tools",
    "crates/reverie-engine-lite",
    "crates/reverie-mcp",
    "crates/reverie-skills",
    "crates/reverie-subagents",
    "crates/reverie-plugins",
    "crates/reverie-tui",
    "crates/reverie-lsp",
    "crates/reverie-sandbox",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Reverie Contributors"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
dirs = "5.0"
encoding_rs = "0.8"
eventsource-stream = "0.2"
futures = "0.3"
git2 = { version = "0.19", default-features = false, features = ["https"] }
ignore = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3.14"
thiserror = "2.0"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread", "io-std", "io-util", "process", "time", "fs"] }
toml = "0.8"
tracing = "0.1"
walkdir = "2.5"
yaml-rust = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
