[package]
name = "reverie-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "reverie"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true

reverie-context = { path = "../reverie-context" }
reverie-core = { path = "../reverie-core" }

[build-dependencies]
winres = "0.1"

[dev-dependencies]
tempfile.workspace = true
