[package]
name = "reverie-lsp"
version = "0.1.0"
edition = "2021"
description = "Reverie LSP - Language Server Protocol integration"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
