[package]
name = "reverie-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "MCP (Model Context Protocol) client and server for Reverie CLI"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
