[package]
name = "reverie-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Plugin manifest and lifecycle primitives for Reverie CLI"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
