[package]
name = "reverie-sandbox"
version = "0.1.0"
edition = "2021"
description = "Reverie sandbox - secure execution environment"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processenv", "securitybaseapi"] }

[target.'cfg(unix)'.dependencies]
nix = "0.27"
