[package]
name = "reverie-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Skill discovery and execution system for Reverie CLI"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
regex.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
walkdir.workspace = true
yaml-rust.workspace = true
