[package]
name = "reverie-subagents"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Subagent management for Reverie CLI"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
