[package]
name = "reverie-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
git2.workspace = true
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
walkdir.workspace = true

reverie-context = { path = "../reverie-context" }
reverie-engine-lite = { path = "../reverie-engine-lite" }

[dev-dependencies]
tempfile.workspace = true
