[package]
name = "reverie-tui"
version = "0.1.0"
edition = "2021"
description = "Reverie TUI - Terminal User Interface"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
unicode-width = "0.2"

[dev-dependencies]
tokio-test = "0.4"
